--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Android</string>
+    <string name="title_activity_layoutactivity">Layoutactivity</string>
+    <string name="title_activity_intentactivity">intentactivity</string>
 </resources>
