--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Android</string>
     <string name="title_activity_layoutactivity">Layoutactivity</string>
     <string name="title_activity_intentactivity">intentactivity</string>
+    <string name="title_activity_formactivity">formactivity</string>
 </resources>
