--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="title_activity_woofactivity">woofactivity</string>
     <string name="title_activity_main2">MainActivity2</string>
     <string name="title_activity_lottiactivity">Lottiactivity</string>
+    <string name="title_activity_splashactivity">splashactivity</string>
 </resources>
